* Installed: -autoprune=maxblocks mode (1 block max default) when ProcessBlock gets an orphan block after InitialBlockDownload
* Installed: -bootstrap downloads recent version from ProfitHuntersCoin.com automatically
* FIX: LevelDB (Android)
* Disabled: accountingDeprecationCheck
* Assert() replaced by proper debuging in core functions/classes

TO FINISH:
* Apostolaki Hijack fix (Firewall)
* Eclipse Attack fix (Firewall)
* Erebus Attack fix (Firewall)

v1.0.0.7 (To Finish before release)
--------
* DDoS Shield & Firewall upgrades
* Masternode reward decentralization (Hard-Fork 1)
* New RPC: getasicchokerlog, blockshield, dynamiccheckpoint
* Transaction View Masternode payments / staking / mining

v1.0.0.6
--------
* Updated Checkpoints
* Updated Fixed Seednodes with active masternodes list
* Bitcoin Firewall 1.2.2.4
* Masternode manager GUI - Cleanup
* Stake Halving Bug Fixed
* Testnet Established
* Dark Theme Installed
* Darksend Amounts lowered
* About -> Information -> Open PHC.conf button
* About -> Information -> Open Masternode.conf button
* Masternodes -> My Masternodes -> Open Masternode.conf button

v1.0.0.5
--------
* Updated Checkpoints
* Improved Bitcoin Firewall 1.2.2.3
* Fixed GUI Masternode manager (Downloading List...)
* Fixed Large bandwidth usage from certain peers
* Fixed issue with Dynamic Block Reward 3.0

v1.0.0.4
--------
* Updated Checkpoints
* Reformatted Bitcoin Firewall 1.2.2.2 source code
* RPC & phc.conf support added to Bitcoin Firewall
* Fixed masternode status bug when started remotely
* Fixed GUI Start masternode without updating

v1.0.0.3
--------
* Updated Seednodes from current Masternodes
* Updated Checkpoints
* Fixed Core 8 Cnode::nSyncHeight
* Added Firewall logging to debug.log

v1.0.0.2
--------
* Updated Checkpoints
* Improved ForkFix from 1.0.0.1 (net.cpp)

v1.0.0.1
--------
* Bitcoin Firewall 1.2.2
* Fixed chain-forking in Bitcoin Core (net.cpp)

v1.0.0.0
--------
* Dynamic Block Reward 3.0 integration